fixed spacing of header

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -20,7 +20,7 @@ header {
 main {
     padding: 1em;
     grid-area: main;
-    margin-top:-100px;
+    margin-top:-170px;
 }
 .faq {
     font-size:4em;
